Add Network onboarding entry

--- a/onboarding/defaults.conf
+++ b/onboarding/defaults.conf
@@ -1,2 +1,2 @@
 [Onboarding]
-order=OnboardingWelcome:OnboardingBetaThankYou:OnboardingRegion:OnboardingTimeZone:OnboardingHostname:OnboardingUsers:OnboardingTheme:OnboardingCompleteOobe
+order=OnboardingWelcome:OnboardingBetaThankYou:OnboardingRegion:OnboardingNetwork:OnboardingTimeZone:OnboardingHostname:OnboardingUsers:OnboardingTheme:OnboardingCompleteOobe
