--- a/libscallop/CMakeLists.txt
+++ b/libscallop/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(lib VERSION 1.0.0 LANGUAGES CXX)
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package(libcontemporary REQUIRED)
 
 set(SOURCES
@@ -25,5 +25,5 @@ set_target_properties(libscallop PROPERTIES
         VERSION 1.0.0
         PUBLIC_HEADER "${HEADERS}")
 
-target_link_libraries(libscallop Qt6::Widgets libcontemporary)
+target_link_libraries(libscallop Qt::Widgets libcontemporary)
 target_compile_definitions(libscallop PRIVATE LIBSCALLOP_LIBRARY)
