--- a/onboarding-service/CMakeLists.txt
+++ b/onboarding-service/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(scalloponboardingservice VERSION 1.0.0 LANGUAGES CXX)
 
-find_package(Qt6 REQUIRED COMPONENTS Core DBus)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core DBus)
+cntp_find_pkgconfig(X11 x11 REQUIRED)
 
 set(SOURCES
     main.cpp
@@ -19,8 +20,9 @@ set_target_properties(scalloponboardingservice PROPERTIES
 
 cntp_init(scalloponboardingservice 20)
 
-target_link_libraries(scalloponboardingservice Qt6::Core Qt6::DBus)
+target_link_libraries(scalloponboardingservice Qt::Core Qt::DBus PkgConfig::X11)
 
 install(TARGETS scalloponboardingservice
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE SETUID
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         BUNDLE DESTINATION /Applications)
